hotfix(NLW-86): fix spacing section

--- a/src/components/templates/Leadership/index.scss
+++ b/src/components/templates/Leadership/index.scss
@@ -233,17 +233,17 @@
 }
 
 .t-leadership {
-  padding-bottom: rem(60);
-  padding-top: rem(60);
+  padding-bottom: rem(80);
+  padding-top: rem(80);
 
   @include tablet-down {
-    padding-bottom: rem(40);
-    padding-top: rem(40);
+    padding-bottom: rem(60);
+    padding-top: rem(60);
   }
 
-  @include small-mobile {
-    padding-bottom: rem(25);
-    padding-top: rem(25);
+  @include mobile-down {
+    padding-bottom: rem(40);
+    padding-top: rem(40);
   }
 
   &_wrapper {
