--- a/src/components/templates/OutStandingNumbers/index.scss
+++ b/src/components/templates/OutStandingNumbers/index.scss
@@ -2,9 +2,17 @@
   background-color: $white-smoke-8f8;
   background-image: url('~assets/images/bg_outStandingNumbers.png');
   background-repeat: no-repeat;
-  padding: rem(100) 0;
+  padding-bottom: rem(80);
+  padding-top: rem(80);
+
   @include tablet-down {
-    padding: rem(24) 0;
+    padding-bottom: rem(60);
+    padding-top: rem(60);
+  }
+
+  @include mobile-down {
+    padding-bottom: rem(40);
+    padding-top: rem(40);
   }
 
   &_list {
