--- a/src/components/templates/VisionMissionValue/index.scss
+++ b/src/components/templates/VisionMissionValue/index.scss
@@ -4,12 +4,17 @@
   &_wrapper {
     display: flex;
     flex-wrap: wrap;
-    padding-bottom: rem(72);
-    padding-top: rem(72);
+    padding-bottom: rem(80);
+    padding-top: rem(80);
 
     @include tablet-down {
-      padding-bottom: rem(24);
-      padding-top: rem(24);
+      padding-bottom: rem(60);
+      padding-top: rem(60);
+    }
+
+    @include mobile-down {
+      padding-bottom: rem(40);
+      padding-top: rem(40);
     }
   }
 
